@@ -31,9 +31,7 @@
 <br>&nbsp;<br><h3><a name=abstract class=none>Abstract</a></h3>
 
 The code comes with
-a <a
-href="http://www.opensource.org/licenses/bsd-license.php">BSD-style
-license</a> so you can basically do with it whatever you want.
+a MIT license so you can basically do with it whatever you want. 
 
 <p>
 <font color=red>Download shortcut:</font> <a href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>.
@@ -45,7 +43,7 @@ license</a> so you can basically do with it whatever you want.
   <li><a href="#dictionary">The  dictionary</a>
     <ol>
     
-    <li><a href="#delete-a-bug"><code>delete-a-bug</code></a>
+    <li><a href="#add-a-comment"><code>add-a-comment</code></a>
     
     <li><a href="#get-a-bug"><code>get-a-bug</code></a>
     
@@ -65,22 +63,22 @@ license</a> so you can basically do with it whatever you want.
 
 LAUNCHPAD together with this documentation can be downloaded from <a
 href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>. The
-current version is 0.2.
+current version is 0.4.
 
 <br>&nbsp;<br><h3><a class=none name="dictionary">The LAUNCHPAD dictionary</a></h3>
 
 
 
-<!-- Entry for DELETE-A-BUG -->
+<!-- Entry for ADD-A-COMMENT -->
 
-<p><br>[Function]<br><a class=none name='delete-a-bug'><b>delete-a-bug</b> <i>bug-id</i> =&gt; <i>result</i></a>
+<p><br>[Function]<br><a class=none name='add-a-comment'><b>add-a-comment</b> <i>bug-id comment</i> =&gt; <i>result</i></a>
 <blockquote><br>
 
 
 
 </blockquote>
 
-<!-- End of entry for DELETE-A-BUG -->
+<!-- End of entry for ADD-A-COMMENT -->
 
 
 <!-- Entry for GET-A-BUG -->
@@ -152,6 +150,6 @@ Get a request token and let user approve it, then exchange it to
 This documentation was prepared with <a href="http://weitz.de/documentation-template/">DOCUMENTATION-TEMPLATE</a>.
 </p>
 <p>
-<!-- hhmts start --> Last modified: Wed Dec  9 09:49:03 CST 2009 <!-- hhmts end -->
+Last modified: 2009/12/12 11:42:54
 </body>
 </html>
