@@ -31,9 +31,7 @@
 <br>&nbsp;<br><h3><a name=abstract class=none>Abstract</a></h3>
 
 The code comes with
-a <a
-href="http://www.opensource.org/licenses/bsd-license.php">BSD-style
-license</a> so you can basically do with it whatever you want.
+a <!-- TMPL_VAR license --> license so you can basically do with it whatever you want. 
 
 <p>
 <font color=red>Download shortcut:</font> <a href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>.
@@ -55,7 +53,7 @@ license</a> so you can basically do with it whatever you want.
 
 <!-- TMPL_VAR package-name --> together with this documentation can be downloaded from <a
 href="http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz">http://common-lisp.net/project/cl-launchpad/cl-launchpad_latest.tar.gz</a>. The
-current version is 0.2.
+current version is <!-- TMPL_VAR version  -->.
 
 <br>&nbsp;<br><h3><a class=none name="dictionary">The <!-- TMPL_VAR package-name --> dictionary</a></h3>
 
@@ -67,6 +65,6 @@ current version is 0.2.
 This documentation was prepared with <a href="http://weitz.de/documentation-template/">DOCUMENTATION-TEMPLATE</a>.
 </p>
 <p>
-<!-- hhmts start --> Last modified: Wed Dec  9 09:49:03 CST 2009 <!-- hhmts end -->
+Last modified: <!-- TMPL_VAR time -->
 </body>
 </html>
