@@ -2,15 +2,17 @@
 
 (defparameter project "clbuild-repos")
 
+(defparameter bug-id 1)
+
 (launchpad:get-token-and-login project)
 
 (launchpad:get-all-bugs project)
 
-(launchpad:open-a-bug project "test" "just testing")
+(setf bug-id (launchpad:open-a-bug project "test" "just testing"))
 
-(launchpad:update-a-bug 483637 :title "modify test" :description "modify just testing")
+(launchpad:update-a-bug bug-id :title "modify test" :description "modify just testing")
 
-(launchpad:get-a-bug 483637)
+(launchpad:get-a-bug bug-id)
 
 (launchpad:add-a-comment 483637 "test adding a comment")
 
