@@ -1,3 +1,11 @@
+2009-12-11  Plato Wu  <gtalk000@gmail.com>
+
+	* example/clbuild-repos.lisp: update example.
+
+	* launchpad.lisp (http-request-for-launchpad): A wrapper for
+	http-request, it provide eror handler and decode json for body.
+	(open-a-bug): it return the bug id now.
+
 2009-12-09  Plato Wu  <gtalk000@gmail.com>
 
 	* launchpad.lisp (get-a-bug): New it.
